# lux-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO_REFACTOR.md  luxpy
data/photbiochem/: cie_s026_2018.csv  cie_tn003_2015.csv  lrc_2012.csv  lrc_2021.csv
lux/src/: color.rs
src/: cam.rs  color.rs  cri.rs  illuminants.rs  indvcmf.rs  lib.rs  spdbuild.rs  spectral_mismatch.rs  spectrum.rs
tests/: color_api.rs  illuminants_api.rs  indvcmf_api.rs  photometry_api.rs  plot_rgb_primaries.py  python_parity.rs  spdbuild_api.rs  spectrum_api.rs
tests/python_ref/: adaptation_cam_baselines.py  baseline_helpers.py  baseline_sources.py  color_baselines.py  cri_illuminant_baselines.py  current_baselines.py  observer_baselines.py  plot_red_primary.py  spectral_baselines.py
